fix: alignment errors

--- a/src/Components/Home/Home.css
+++ b/src/Components/Home/Home.css
@@ -15,9 +15,6 @@
   display: flex;
   flex-direction: column;
 }
-.landing {
-  height: 100vh;
-}
 .main-head {
   font-weight: 900;
   font-size: 80px;
@@ -80,6 +77,9 @@
   transform: translate(-50%, 0%) rotate(45deg);
   animation: fade_move_down 4s ease-in-out infinite;
 }
+.scroll-down,.scroll-down2:hover{
+  cursor: pointer;
+}
 .scroll-down2{
   bottom: 45px;
 }
@@ -110,7 +110,7 @@ section {
   height: 100vh;
   background-color: #0c1627;
   position: relative;
-  z-index: 0;
+  z-index: -1;
 }
 
 .logo {
@@ -159,7 +159,7 @@ section {
   margin: 25px 50px 25px 25px;
 }
 .esummit #a {
-  width: 120px;
+  width: 150px;
   height: fit-content;
   position: absolute;
   color: #fff;
@@ -169,7 +169,7 @@ section {
   bottom: 0px;
   left: 30px;
   right: 45px;
-  top: 120px;
+  top: 150px;
   transform: rotate(270deg);
   transform-origin: 0 0;
   padding: 5px;
@@ -185,7 +185,7 @@ section {
 }
 .esummit .vertical-line {
   border-left: 3px solid #e28f45;
-  height: 130px;
+  height: 170px;
   position: absolute;
   left: 160px;
   right: 20px;
@@ -253,7 +253,6 @@ section {
     display: none;
   }
   .ecell #pa {
-    max-width: 80%;
     max-height: 80%;
     color: white;
     padding: 10px 50px 0px 50px;
@@ -262,7 +261,6 @@ section {
     text-align: justify;
   }
   .esummit #pa {
-    max-width: 80%;
     max-height: 80%;
     color: white;
     padding: 10px 50px 10px 50px;
@@ -271,7 +269,6 @@ section {
     text-align: justify;
   }
   .esummit #epa {
-    max-width: 80%;
     max-height: 80%;
     color: white;
     padding: 10px 50px 50px 50px;
@@ -568,16 +565,6 @@ ul {
     margin: 30px 55px 30px 0px;
   }
 }
-/* .yellow-line {
-  background:#e39046;
-  top:0px;
-  height: 100%;
-  z-index: 3;
-  width:9px;
-  position:absolute;
-  margin-left: 90px;
-} */
-
 .past-sponsors {
   background: #0c1627;
 }
@@ -760,8 +747,8 @@ ul {
   }
 }
 .image-slider {
-  width: 90vw;
-  box-sizing: border-box;
+  width: 100vw;
+  height: 100%;
 }
 @import url('https://fonts.googleapis.com/css2?family=Poppins');
 
@@ -866,3 +853,54 @@ body {
   color: #f1f1f1;
   transition: all 0.2s ease;
 }
+.wave{
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  line-height: 0;
+
+}
+.wavy{
+  width: 100%;
+  height: 100%;
+
+}
+.wave:before{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../Images/wave.svg) repeat-x;
+  background-size: cover;
+  background-position: -1000px 0;
+  opacity: .3;
+  animation: waveOne 60s linear infinite;
+}
+@keyframes waveOne {
+  50%{
+      background-position: 0 0;
+  }
+}
+.wave:after{
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url(../Images/wave.svg) repeat-x;
+  background-size: cover;
+  background-position: 1000px 0;
+  opacity: .2;
+  animation: waveOne 120s linear infinite; 
+}
+  /* .slick-slide {
+    margin: 0 27px; 
+  }
+  /* the parent */
+  /* .slick-list {
+    margin: 0 -27px;
+  }  */
